--- a/CSS/VIDEO 47/style.css
+++ b/CSS/VIDEO 47/style.css
@@ -63,6 +63,7 @@ p{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 100px;
 }
 .item{
     max-width: 302px;
@@ -83,6 +84,12 @@ p{
     grid-template-columns: 1fr 1fr 1fr;
     gap: 12px;
 }
-.downlode :nth-child(2){
-    /* font-size: 40px;    */
+.name{
+    font-size: 30px;   
+}
+.Downlode{
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    gap: 10px;
 }
