--- a/PROJECT/NETFLIX/style.css
+++ b/PROJECT/NETFLIX/style.css
@@ -6,6 +6,9 @@
     background-image: url("assets/image/bg.jpg");
     height: 80vh;
     position: relative;
+    background-position: center center;
+    background-size: max(1200px, 100vw);
+    background-repeat: no-repeat;
 }
 
 .main .box{
@@ -18,4 +21,9 @@
 }
 nav{
     display: flex;
+    align-items: center;
+    max-width: 80vw;
+    justify-content: space-between;
+    margin: auto;
+    height:62px;
 }
