--- a/PROJECT/NETFLIX/style.css
+++ b/PROJECT/NETFLIX/style.css
@@ -1,41 +1,80 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-.main{
-    background-image: url("assets/image/bg.jpg");
-    height: 80vh;
-    position: relative;
-    background-position: center center;
-    background-size: max(1200px, 100vw);
-    background-repeat: no-repeat;
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;400;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.main .box{
-    height: 80vh;
-    width: 100%;
-    opacity: 0.44;
-    background-color: black;
-    position: absolute;
-    top: 0;
-}
-nav{
-    display: flex;
-    align-items: center;
-    max-width: 80vw;
-    justify-content: space-between;
-    margin: auto;
-    height:62px;
-}
-nav img{
-    color: red;
-    width: 5.5625rem;
-    height: 1.5rem;
-    position: relative;
-    z-index: 10;
+body{
+  background-color: black;
 }
 
-nav button{
-    position: relative;
-    z-index: 10;
+.main {
+  background-image: url("assets/image/bg.jpg");
+  height: 70vh;
+  position: relative;
+  background-position: center center;
+  background-size: max(1200px, 100vw);
+  background-repeat: no-repeat;
+}
+
+.main .box {
+  height: 70vh;
+  width: 100%;
+  opacity: 0.44;
+  background-color: black;
+  position: absolute;
+  top: 0;
+}
+nav {
+  display: flex;
+  align-items: center;
+  max-width: 80vw;
+  justify-content: space-between;
+  margin: auto;
+  height: 62px;
+}
+nav img {
+  color: red;
+  width: 5.5625rem;
+  height: 1.5rem;
+  position: relative;
+  z-index: 10;
+}
+
+nav button {
+  position: relative;
+  z-index: 10;
+}
+
+.hero {
+  font-family: "Martel Sans", sans-serif;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  position: relative;
+  gap: 23px;
+}
+.hero>:nth-child(1){
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+  font-size: 30px;
+  text-align: center;
+}
+
+.hero>:nth-child(2){
+  font-weight: 400;
+  font-size: 24px;
+}
+
+.hero>:nth-child(3){
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.hero>:nth-child(4){
+  font-weight: 400;
+  font-size: 20px;
 }
