--- a/PROJECT/NETFLIX/style.css
+++ b/PROJECT/NETFLIX/style.css
@@ -130,6 +130,7 @@ nav button {
   margin: auto;
   color: white;
   align-items: center;
+  padding: 10px;
 }
 
 .secImg {
@@ -145,5 +146,18 @@ nav button {
 .secImg video {
   position: absolute;
   top: 51px;
-  right: 0;
-  width: 482px;}
+  right: 8px;
+  width: 472px;
+}
+
+.first > div :first-child{
+  font-size: 48px;
+  font-weight: bolder;
+}
+
+.first > div :nth-child(2){
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: 'Poppins', sans-serif;
+
+}
